--- a/app/src/main/res/layout/activity_list_food.xml
+++ b/app/src/main/res/layout/activity_list_food.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,15 +7,14 @@
     android:layout_marginTop="15dp"
     android:layout_marginLeft="25dp"
     android:layout_marginRight="25dp"
-    android:layout_marginBottom="25dp"
-    tools:context=".ListFoodActivity">
+    android:layout_marginBottom="25dp">
 
     <!-- Judul Halaman -->
     <TextView
         android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/food_list_title"
+        android:text="Food List"
         android:textSize="24sp"
         android:textStyle="bold"
         android:layout_gravity="center_horizontal"
@@ -29,5 +26,4 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical"/>
-
 </LinearLayout>
